# signedshot-validator

./: .gitignore  Cargo.toml  LICENSE  README.md  photo_20260127_073124.sidecar.json  pyproject.toml
.github/workflows/: ci.yml  release-pr.yml  release.yml
python/: README.md
python/signedshot/: __init__.py  __init__.pyi
python/signedshot_validator/: __init__.py  __init__.pyi
src/: error.rs  integrity.rs  jwt.rs  lib.rs  python.rs  sidecar.rs  validate.rs
