[package]
name = "signedshot-validator"
version = "0.1.0"
edition = "2021"
description = "Validator for SignedShot media authenticity proofs"
license = "MIT"
repository = "https://github.com/SignedShot/signedshot-validator"

[[bin]]
name = "signedshot"
path = "src/bin/signedshot.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
