[package]
name = "signedshot-validator"
version = "0.1.0"
edition = "2021"
description = "Validator for SignedShot media authenticity proofs"
license = "MIT"
repository = "https://github.com/SignedShot/signedshot-validator"

[[bin]]
name = "signedshot"
path = "src/bin/signedshot.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
jsonwebtoken = "9"
p256 = { version = "0.13", features = ["ecdsa"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
