[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "signedshot"
version = "0.1.4"
description = "Validator for SignedShot media authenticity proofs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
]
keywords = ["signedshot", "media", "authenticity", "validation", "cryptography"]

[project.urls]
Homepage = "https://signedshot.io"
Repository = "https://github.com/SignedShot/signedshot-validator"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "signedshot"
